Refactor Wallet and Vault GUIs, overhaul translation management, and remove legacy localization files